<resources>
    <string name="app_name">Tape Measure</string>
    <string name="app_name_long">Privacy Friendly Tape Measure</string>
    <string name="action_ruler">Screen Ruler</string>
    <string name="action_camera">Camera Ruler</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="screen_ruler">Screen Ruler</string>
    <string name="action_calibration">Calibrate</string>
    <string name="action_reset_calibration">Reset Calibration</string>
    <string name="description_camera_gallery">Get a picture to measure. You can either take a picture with your camera or use a picture from your phone\'s memory.</string>
    <string name="from_camera">Picture from Camera</string>
    <string name="from_gallery">Picture from Gallery</string>
    <string name="reference_self_intersecting">The reference object must not self-intersect.</string>
    <string name="camera_ruler">Camera Ruler</string>
    <string name="camera_crash">Camera App crashed.</string>
    <string name="gallery_crash">Gallery App crashed.</string>
    <string name="reference_phase_title">Place Reference Object</string>
    <string name="measurement_phase_title">Measure</string>
    <string name="new_tetragon">New Tetragon</string>
    <string name="new_triangle">New Triangle</string>
    <string name="new_circle">New Circle</string>
    <string name="new_line">New Line</string>
    <string name="confirm_reference">Confirm Reference</string>
    <string name="length">Length:</string>
    <string name="area">Area:</string>
    <string name="self_intersection_warning">Can\'t compute area of self-intersecting polygon.</string>
    <string name="us_penny_coin">US Penny Coin</string>
    <string name="us_nickel_coin">5 USD-Cent Coin (Nickel)</string>
    <string name="us_dime_coin">10 USD-Cent Coin (Dime)</string>
    <string name="us_quarter_coin">25 USD-Cent Coin (Quarter)</string>
    <string name="us_dollar_coin">1$ Coin</string>
    <string name="fifty_usd_cent_coin">50 USD-Cent Coin</string>
    <string name="one_euro_cent_coin">1 Euro-Cent Coin</string>
    <string name="two_euro_cent_coin">2 Euro-Cent Coin</string>
    <string name="five_euro_cent_coin">5 Euro-Cent Coin</string>
    <string name="ten_euro_cent_coin">10 Euro-Cent Coin</string>
    <string name="twenty_euro_cent_coin">20 Euro-Cent Coin</string>
    <string name="fifty_euro_cent_coin">50 Euro-Cent Coin</string>
    <string name="one_euro_coin">1€ Coin</string>
    <string name="two_euro_coin">2€ Coin</string>
    <string name="gb_penny_coin">British Penny Coin</string>
    <string name="two_pence_coin">2 Pence Coin</string>
    <string name="five_pence_coin">5 Pence Coin</string>
    <string name="ten_pence_coin">10 Pence Coin</string>
    <string name="twenty_pence_coin">20 Pence Coin</string>
    <string name="fifty_pence_coin">50 Pence Coin</string>
    <string name="one_pound_coin">1£ Coin</string>
    <string name="two_pound_coin">2£ Coin</string>
    <string name="us_dollar_note">US Dollar Banknote</string>
    <string name="five_euro_note">5€ Note</string>
    <string name="ten_euro_note">10€ Note</string>
    <string name="twenty_euro_note">20€ Note</string>
    <string name="fifty_euro_note">50€ Note</string>
    <string name="hundred_euro_note">100€ Note</string>
    <string name="two_hundred_euro_note">200€ Note</string>
    <string name="five_hundred_euro_note">500€ Note</string>
    <string name="five_pound_note">5£ Note</string>
    <string name="ten_pound_note">10£ Note</string>
    <string name="twenty_pound_note">20£ Note</string>
    <string name="fifty_pound_note">50£ Note</string>
    <string name="one_krona_coin">1 Swedish Krona Coin</string>
    <string name="two_krona_coin">2 Swedish Krona Coin</string>
    <string name="five_krona_coin">5 Swedish Krona Coin</string>
    <string name="ten_krona_coin">10 Swedish Krona Coin</string>
    <string name="twenty_krona_note">20 Swedish Krona Note</string>
    <string name="fifty_krona_note">50 Swedish Krona Note</string>
    <string name="hundred_krona_note">100 Swedish Krona Note</string>
    <string name="two_hundred_krona_note">200 Swedish Krona Note</string>
    <string name="five_hundred_krona_note">500 Swedish Krona Note</string>
    <string name="thousand_krona_note">1000 Swedish Krona Note</string>
    <string name="ten_kopeyka_coin">10 Kopeyka Coin</string>
    <string name="fifty_kopeyka_coin">50 Kopeyka Coin</string>
    <string name="one_ruble_coin">1 Ruble Coin</string>
    <string name="two_ruble_coin">2 Ruble Coin</string>
    <string name="five_ruble_coin">5 Ruble Coin</string>
    <string name="ten_ruble_coin">10 Ruble Coin</string>
    <string name="fifty_ruble_note">50 Ruble Note</string>
    <string name="hundred_ruble_note">100 Ruble Note</string>
    <string name="five_hundred_ruble_note">500 Ruble Note</string>
    <string name="thousand_ruble_note">1000 Ruble Note</string>
    <string name="five_thousand_ruble_note">5000 Ruble Note</string>
    <string name="one_yen_coin">1¥ Coin</string>
    <string name="five_yen_coin">5¥ Coin</string>
    <string name="ten_yen_coin">10¥ Coin</string>
    <string name="fifty_yen_coin">50¥ Coin</string>
    <string name="hundred_yen_coin">100¥ Coin</string>
    <string name="five_hundred_yen_coin">500¥ Coin</string>
    <string name="thousand_yen_note">1000¥ Note</string>
    <string name="two_thousand_yen_note">2000¥ Note</string>
    <string name="five_thousand_yen_note">5000¥ Note</string>
    <string name="ten_thousand_yen_note">10 000¥ Note</string>
    <string name="letter_paper">Letter Paper</string>
    <string name="legal_paper">Legal Paper</string>
    <string name="tabloid_paper">Tabloid Paper</string>
    <string name="ledger_paper">Ledger Paper</string>
    <string name="junior_legal_paper">Junior Legal Paper</string>
    <string name="memo_paper">Memo Paper</string>
    <string name="government_letter_paper">Government Letter Paper</string>
    <string name="government_legal_paper">Government Legal Paper</string>
    <string name="a0_paper">A0 Paper</string>
    <string name="a1_paper">A1 Paper</string>
    <string name="a2_paper">A2 Paper</string>
    <string name="a3_paper">A3 Paper</string>
    <string name="a4_paper">A4 Paper</string>
    <string name="a5_paper">A5 Paper</string>
    <string name="a6_paper">A6 Paper</string>
    <string name="measureLineHeading">1. Measure</string>
    <string name="measureLine">Please measure the length of the line on the left as precisely as possible.</string>
    <string name="headingEnter">2. Enter Measured Length</string>
    <string name="calibrationMM">mm</string>
    <string name="calibrationInch">inch</string>
    <string name="calibrateConfirmButton">Calibrate</string>
    <string name="calibrationWarning">Manual calibration does not eliminate inaccuracies due to rounding. Do not use this app as a professionally calibrated measuring device.</string>
    <string name="calibrate">Calibrate</string>
    <string name="noInput">Please input the length of the line.</string>
    <string name="calibrationDone">Calibration finished.</string>
    <string name="help">Help</string>
    <string name="help_overview_heading">Overview</string>
    <string name="help_calibration">Manual Calibration</string>
    <string name="help_disclaimer">Disclaimer</string>
    <string name="help_category_calibration">Calibration</string>
    <string name="pref_calibration_summary">You can manually calibrate the ruler via the "calibrate" option in the action menu.</string>
    <string name="pref_disclaimer_summary">This app is not a professionally calibrated measuring device. SECUSO is not liable for any damage caused by use of this app.</string>
    <string name="help_privacy_heading">Privacy Info</string>
    <string name="help_category_options">Settings</string>
    <string name="help_units">Left and Right Ruler</string>
    <string name="pref_units_summary">You can display a cm ruler, an inch ruler or no ruler on the left and on the right side of the screen. Both rulers can be set separately in the option menu.</string>
    <string name="help_angles">Angle Measure</string>
    <string name="pref_angles_summary">You can display an angle measure in degrees or radian instead of the ruler on the left side of the screen.</string>
    <string name="help_intro">The Privacy Friendly Tape Measure turns Your Phone into a ruler for quick on the fly measurements.</string>
    <string name="help_camera_ruler_heading">Camera Ruler</string>
    <string name="help_camera_ruler1">You can choose to take a picture with the camera or use one from the gallery. Be sure that all the relevant objects are in the same plane and the picture is taken perpendicularly to that plane.</string>
    <string name="help_permission">Permissions</string>
    <string name="help_permission_answer">Privacy Friendly Tape Measure does not require any permission for taking and measuring a picture from the camera. Taking a picture from the gallery requires the Read External Storage permission as most pictures are not stored in the internal memory.</string>
    <string name="pref_ruler">Ruler Settings</string>
    <string name="pref_leftruler">Left Ruler</string>
    <string name="pref_leftruler_verbose">What should be displayed on left ruler?</string>
    <string name="pref_leftruler_default" translatable="false">cm</string>
    <string name="pref_rightruler">Right Ruler</string>
    <string name="pref_rightruler_verbose">What should be displayed on right ruler?</string>
    <string name="pref_rightruler_default" translatable="false">inch</string>
    <string name="ruler_cm">Ruler (cm)</string>
    <string name="ruler_inch">Ruler (inch)</string>
    <string name="ruler_degree">Angle Measure (degree)</string>
    <string name="ruler_radian">Angle Measure (radian)</string>
    <string name="ruler_off">Nothing</string>
    <string name="camera_ruler_settings">Camera Ruler Settings</string>
    <string name="pref_units_of_measurement">Units of measurement</string>
    <string name="pref_uom_verbose">What units of measurement to use in the screen ruler?</string>
    <string name="pref_uom_default" translatable="false">mm</string>
    <string name="pref_type_selection">Reference Type Selection</string>
    <string name="pref_type_selection_verbose">What reference object types to use?</string>
    <string name="pref_type_selection_summary">Disable reference object categoreis you don\'t want to use.</string>
    <string name="pref_edit_user_def_refs">Edit user defined references</string>
    <string name="edit_name">Name:</string>
    <string name="edit_shape">Shape:</string>
    <string name="edit_line">Line</string>
    <string name="edit_circle">Circle</string>
    <string name="edit_tetragon">Tetragon</string>
    <string name="edit_size">Size:</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="okay">Okay</string>
    <string name="help_uom">Units of Measurement</string>
    <string name="help_ref_types">Reference Type Selection</string>
    <string name="help_ref_editor">Edit user defined references</string>
    <string name="pref_uom_summary">You can set the units of measurements to be used in the camera ruler.</string>
    <string name="pref_ref_types_summary">You can disable certain types of predefined reference objects. They won\'t show up in the menu during reference object choice.</string>
    <string name="pref_ref_editor_summary">Here you can define and manage user defined reference objects (up to 10).</string>
</resources>