<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/help_overview_heading">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:title=""
            android:summary="@string/help_intro"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_camera_ruler_heading">
        <Preference
            android:selectable="false"
            android:persistent="false"
            android:title=""
            android:summary="@string/help_camera_ruler"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_category_options">
        <Preference android:title="@string/help_units"
            android:summary="@string/pref_units_summary"
            android:selectable="false"/>
        <Preference android:title="@string/help_angles"
            android:summary="@string/pref_angles_summary"
            android:selectable="false"/>
        <Preference android:title="@string/help_uom"
            android:summary="@string/pref_uom_summary"
            android:selectable="false"/>
        <Preference android:title="@string/help_ref_types"
            android:summary="@string/pref_ref_types_summary"
            android:selectable="false"/>
        <Preference android:title="@string/help_ref_editor"
            android:summary="@string/pref_ref_editor_summary"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_category_calibration">
        <Preference android:title="@string/help_calibration"
            android:summary="@string/pref_calibration_summary"
            android:selectable="false"/>
        <Preference android:title="@string/help_disclaimer"
            android:summary="@string/pref_disclaimer_summary"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_privacy_heading">
        <Preference
            android:summary="@string/help_permission_answer"
            android:title="@string/help_permission" />
    </PreferenceCategory>

</PreferenceScreen>