<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_ruler">
        <ListPreference
            android:key="pref_leftruler"
            android:title="@string/pref_leftruler"
            android:dialogTitle="@string/pref_leftruler_verbose"
            android:entries="@array/pref_leftruler_entries"
            android:entryValues="@array/pref_leftruler_evs"
            android:defaultValue="@string/pref_leftruler_default" />

        <ListPreference
            android:key="pref_rightruler"
            android:title="@string/pref_rightruler"
            android:dialogTitle="@string/pref_rightruler_verbose"
            android:entries="@array/pref_rightruler_entries"
            android:entryValues="@array/pref_rightruler_evs"
            android:defaultValue="@string/pref_rightruler_default" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/camera_ruler_settings">
        <ListPreference
            android:key="pref_units_of_measurement"
            android:title="@string/pref_units_of_measurement"
            android:dialogTitle="@string/pref_uom_verbose"
            android:entries="@array/pref_uom_entries"
            android:entryValues="@array/pref_uom_evs"
            android:defaultValue="@string/pref_uom_default" />

        <MultiSelectListPreference
            android:key="pref_type_selection"
            android:title="@string/pref_type_selection"
            android:dialogTitle="@string/pref_type_selection_verbose"
            android:summary="@string/pref_type_selection_summary"
            android:entries="@array/pref_type_selection_entries"
            android:entryValues="@array/pref_type_selection_evs"
            android:defaultValue="@array/pref_type_selection_evs"/>

        <Preference
            android:key="pref_edit_user_def_refs"
            android:title="@string/pref_edit_user_def_refs"
            />

    </PreferenceCategory>

</PreferenceScreen>
