<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".screenruler.CalibrationActivity"
    android:gravity="center_vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/line"
            android:background="@color/darkblue"
            android:layout_width="5dp"
            android:layout_marginBottom="60dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_height="200dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="5dp"
            android:paddingStart="15dp">

            <TextView
                style="@style/Base.DialogWindowTitle.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/measureLineHeading"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/measureLine"
                android:textAlignment="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp" />

            <TextView
                style="@style/Base.DialogWindowTitle.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/headingEnter"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textAlignment="center"/>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:layout_gravity="center_vertical"
                        android:minWidth="50dp"
                        android:minHeight="10dp"
                        android:maxLength="6"/>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/calibrationMM"
                            android:checked="true" />

                        <RadioButton
                            android:id="@+id/inchRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/calibrationInch" />
                    </RadioGroup>
                </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calibrateConfirmButton"
                android:id="@+id/confirmButton"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_normal"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/calibrationWarning"
                android:textAlignment="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>